Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106695

QScroller doesn't send mouse press events if on primary display

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.7.0 FF
    • 6.2.4, 6.3.2
    • None
    • Windows 10 PC with multiple displays
    • Windows
    • 67fa2585a (dev)

      The bug can be reproduced with the Dir View example on a Windows 10 PC with multiple display configurations. The only code change needed in the example is the change from QScroller::TouchGesture to QScroller::LeftMouseButtonGesture on line 103.

      When the application is run the tree view selection with the mouse will not work if the application window is on the primary display. However the selection will work if the application window is moved to a non-primary display. See attached gif.

        For Gerrit Dashboard: QTBUG-106695
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            jakakatrasnik Jaka Katrasnik
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes